[package]
name = "epi_http"
version = "0.10.0"
authors = ["t18b219k <t18b219k@mail.cc.niigata-u.ac.jp>"]
edition = "2018"
readme ="README.md"
license ="MIT OR Apache-2.0"
description ="epi::http implementation for any egui backends"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
epi={version="0.10.0",features=["http"]}
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys={version="0.3",features=["Headers","Request","RequestInit", "RequestMode","Response","Window"]}
wasm-bindgen = {version="0.2"}
wasm-bindgen-futures = {version="0.4"}
js-sys = {version="0.3"}

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
ureq={version="2.0"}



